[gd_scene load_steps=2 format=3 uid="uid://bl74ejjrhdaxe"]

[ext_resource type="Script" path="res://PopUps/game_summary.gd" id="1_fqxq6"]

[node name="GameSummary" type="Control"]
process_mode = 3
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fqxq6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 350.0
offset_right = 1320.0
offset_bottom = 830.0

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "Summary:
Day X"
horizontal_alignment = 1

[node name="CurrentMoney" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 150.0
offset_right = 651.0
offset_bottom = 192.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Current Money:"

[node name="InvestmentMoney" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 200.0
offset_right = 651.0
offset_bottom = 242.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Investment Money:"

[node name="BankMoney" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 250.0
offset_right = 651.0
offset_bottom = 292.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Bank Money:"

[node name="Continue" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Continue"

[connection signal="pressed" from="Panel/Continue" to="." method="_on_continue_pressed"]
